refactor: Replaced Collectors.toList() with Java 16's List.toList() method